--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
+
+.header{
+  padding: 1rem 2rem;
+  display:flex;
+  background-color: #3b5998;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header h1{
+  color: #ffff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header select{
+  height: 30px;
+  width: 140px;
+  border-radius: 5px;
+  border: none;
 }
+
+section{
+  padding: 1rem;
+}
+
+/* .contents{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+} */
+
+.contents{
+  display: flex;
+  justify-content: left;
+  /* box-sizing: 10rem;
+  size: 1rem; */
+}
+.chart-line-day{  
+  height: 550px;
+  width: 700px;
+}
+
+
+/* .doughnut{
+  size: 4cm,4cm,4cm,4cm;
+  box-sizing: content-box;
+} */
