--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,44 @@
   display: flex;
   flex-direction: column;
 }
-
 .header{
-  padding: 1rem 2rem;
+  position: sticky;
+  top:0px;
+}
+
+.header1{
+  padding: 0rem 2rem;
   display:flex;
   background-color: #3b5998;
   justify-content: space-between;
   align-items: center;
 }
+.header2{
+  padding: 0rem 2rem 1rem;
+  display:flex;
+  background-color: #3b5998;
+  justify-content: right;
+  align-items: center;
+}
+
 
 .header h1{
+  /* position: fixed; */
   color: #ffff;
 }
 
 .header select{
+  /* position: fixed; */
   height: 30px;
   width: 140px;
   border-radius: 5px;
   border: none;
 }
-
+.norm{
+  width: 30px;
+}
 section{
+  position: static;
   padding: 1rem;
 }
 
